Labels fixed. Now they display and transform as expected. Still some alignment can be improved

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 body{
-    background-color: rgb(220, 220, 220)
+    background-color: rgb(220, 220, 220);
+    display: flex;
 }
 
 .wrapper{
